--- a/css/style.css
+++ b/css/style.css
@@ -372,16 +372,15 @@ textarea {
 footer {
     width: 100%;
     height: 15%;
-    display: inline-block;
-    text-align: left;
+    text-align: center;
     border-top: solid white 1px;
     margin-top: 50px;
     background: rgba(255, 255, 255, 0.50);
 }
 
 footer div {
-    display: inline-block;
     height: auto;
+    margin: 2px;
 }
 
 footer img {
@@ -490,7 +489,7 @@ footer .address {
 
 @media only screen and (max-width: 786px) {
     aside img {
-        width: 75px;
+        width: 50px;
     }
     .nav {
         background: rgba(110, 162, 230, 0.6);
@@ -511,7 +510,9 @@ footer .address {
         font-size: 22px;
     }
     .book-form {
-        padding-left: 200px !important;
+        font-size: 14px;
+
+        padding-left: 80px !important;
     }
     .weather-block {
         margin-left: 25px;
