Gallery padding fix for max width 600px

--- a/css/style.css
+++ b/css/style.css
@@ -530,4 +530,8 @@ footer .address {
     .prev {
         top: 30%;
     }
+    .slides {
+        padding-left: 90px;
+        margin: 0;
+    }
 }
