--- a/css/style.css
+++ b/css/style.css
@@ -288,7 +288,7 @@ main section p {
 
 .book-form {
     padding-left: 30px;
-    width: 400px;
+    width: 40%;
     display: inline-block;
     font-weight: bold;
     padding-left: 600px;
@@ -300,7 +300,7 @@ main section p {
 
 .book-logo {
     float: left;
-    ;
+
 }
 
 .required {
@@ -516,7 +516,7 @@ footer .address {
         font-size: 22px;
     }
     .book-form {
-        font-size: 14px;
+        font-size: 10px;
         padding-left: 80px !important;
     }
     .weather-block {
